# engram

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY_AUDIT_2026-02-24.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  docker-compose.yml
examples/: claude_integration.py  multi_agent.py  quickstart.py
examples/claude-code-hook/: README.md  auto_memory_recall.py
integrations/openclaw/: README.md
integrations/openclaw/plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
integrations/openclaw/plugin/src/: index.ts
integrations/openclaw/skill/engram-memory/: SKILL.md
mcp_server/: __init__.py  server.py  tools.py
server/: __init__.py  api.py  auth.py  demo_routes.py  email_service.py  middleware.py  models.py  synapse_routes.py  tiers.py  websocket.py
server/auth/: __init__.py  api_keys.py  database.py  dependencies.py  jwt_handler.py  models.py  passwords.py  routes.py
server/billing/: __init__.py  routes.py  stripe_client.py
src/engram/: __init__.py  autosave.py  client.py  config.py  context.py  exceptions.py  sessions.py
src/engram/core/: __init__.py  decay.py  dedup.py  search.py  types.py
src/engram/embeddings/: __init__.py  base.py  fake.py  local.py  none.py  ollama.py
src/engram/extraction/: __init__.py  extractor.py  patterns.py
src/engram/storage/: __init__.py  base.py  sqlite_backend.py
tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_autosave.py  test_billing.py  test_context.py  test_links.py  test_mcp.py  test_memory.py  test_search.py  test_storage.py
website/: account.html  analytics.html  index.html
